# AO2-Client

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AO2-Client.pro  Attorney_Online.pro  Attorney_Online_remake.pro  CMakeLists.txt  CONTRIBUTING.md  LICENSE.MIT  README.md  README_BUILD.md  README_LINUX.md  README_TEST.md  RELICENSE.md  aoabstractplayer.cpp  aoabstractplayer.hpp  aoapplication.cpp  aoapplication.h  aobasshandle.cpp  aobasshandle.hpp  aoblipplayer.cpp  aoblipplayer.h  aobutton.cpp  aobutton.h  aocaseannouncerdialog.cpp  aocaseannouncerdialog.h  aocharbutton.cpp  aocharbutton.h  aocharmovie.cpp  aocharmovie.h  aocharselect.cpp  aocharselect.h  aoemotebutton.cpp  aoemotebutton.h  aoevidencebutton.cpp  aoevidencebutton.h  aoevidencedisplay.cpp  aoevidencedisplay.h  (+80 more)
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  clang-tidy-review.yml  cmake.yml  test.yml
Attorney_Online/: Attorney_Online.pro
Attorney_Online/include/: aoapplication.h  aoclocklabel.h  aoevidencedisplay.h  aoimage.h  aolayer.h  aopacket.h  datatypes.h  hardware_functions.h  lobby.h  networkmanager.h  scrolltext.h
Attorney_Online/resource/: logo_ao2.rc
Attorney_Online/src/: CMakeLists.txt  aoapplication.cpp  aocharbutton.cpp  aoimage.cpp  aomusicplayer.cpp  courtroom.cpp  discord_rich_presence.cpp  emotes.cpp  evidence.cpp  lobby.cpp  main.cpp  networkmanager.cpp  packet_distribution.cpp  path_functions.cpp  text_file_functions.cpp
_attorney_online/include/: aobutton.h  aocharbutton.h  aoemotepreview.h
_attorney_online/src/: aoclocklabel.cpp  path_functions.cpp  scrolltext.cpp  text_file_functions.cpp
android/: AndroidManifest.xml  project.properties
attorney_online/: attorney_online.pro  resources.qrc
attorney_online/android/: project.properties
attorney_online/include/: CMakeLists.txt  aoapplication.h  aochatqueue.h  aoemotebutton.h  aoevidencebutton.h  aoimage.h  aolayer.h  aomusicplayer.h  aotextarea.h  chatlogpiece.h  courtroom.h  courtroom2.h  datatypes.h  debug_functions.h  discord_rich_presence.h  file_functions.h  lobby.h  misc_functions.h  networkmanager.h  options.h  text_file_functions.h
attorney_online/src/: aoapplication.cpp  aobutton.cpp  aocaseannouncerdialog.cpp  aochatqueue.cpp  aoemotepreview.cpp  aoevidencebutton.cpp  aolayer.cpp  aomusicplayer.cpp  aopacket.cpp  aouiloader.cpp  chatlogpiece.cpp  courtroom.cpp  courtroom2.cpp  debug_functions.cpp  demoserver.cpp  emotes.cpp  evidence.cpp  file_functions.cpp  lobby.cpp  main.cpp  misc_functions.cpp  networkmanager.cpp  options.cpp  packet_distribution.cpp  path_functions.cpp  text_file_functions.cpp
base/: config.ini  config.ini~  favorite_servers_sample.ini  serverlist.txt
cmake/: FindWrapOpenGL.cmake
data/: logo-client.rc
data/translations/: ao_en.ts  ao_jp.qm  ao_pl.qm  ao_pt.ts  ao_ru.ts
data/ui/: favorite_server_dialog.ui  lobby.ui  moderator_action_dialog.ui  options_dialog.ui
include/: CMakeLists.txt  aoapplication.h  aoblipplayer.h  aobutton.h  aocaseannouncerdialog.h  aocharbutton.h  aocharmovie.h  aocharselect.h  aoclocklabel.h  aoemotebutton.h  aoemotepreview.h  aoevidencebutton.h  aoevidencedisplay.h  aoimage.h  aolayer.h  aolineedit.h  aomovie.h  aomusicplayer.h  aooptionsdialog.h  aopacket.h  aopath.h  aoscene.h  aosfxplayer.h  aotextarea.h  aotextboxwidgets.h  aotextedit.h  aouiloader.h  aoutils.h  bass.h  bassopus.h  chatlogpiece.h  courtroom.h  courtroom.h.autosave  datatypes.h  debug_functions.h  demoserver.h  dialog_functions.h  discord-rpc.h  discord_rich_presence.h  discord_rpc.h  (+16 more)
include/contrib/: QtPromise  bass.h
include/data/: aoeffect.hpp  datatypes_animation.hpp  datatypes_common.hpp
include/interfaces/: server_dialog.h
include/network/: aodiscord.hpp  client.h  legacyclient.h  legacyms.h  legacysocket.h  masterserver.h
include/pathing/: aocache.hpp  aofinder.hpp  aovpath.hpp
include/widgets/: add_server_dialog.h  aobutton.h  aocaseannouncerdialog.h  aocharbutton.h  aocharbutton.hpp  aocharselect.hpp  aochat.h  aochatentry.h  aoevidence.h  aoiclog.h  aojukebox.h  aomixer.h  aomovie.h  aomutedialog.h  aooptionsdialog.h  aopairdialog.h  aoroomcontrols.h  aorooms.h  aoviewport.h  aoviewport.hpp  courtroom.h  direct_connect_dialog.h  (+2 more)
resource/: logo.icns  logo_ao2.icns  logo_kenji.rc
scripts/: .gitignore  APPIMAGE_INSTALL.sh  Attorney_Online.desktop  DYNAMIC_INSTALL.sh  appimage_integrator.sh  configure_macos.sh  configure_ubuntu.sh  dynamic_integrator.sh  fix_dynamic_linking_macos.sh  launch.sh  macos_build.sh  macos_post_build.sh  package.json  release_macos.sh  update_manifest.js  update_program_manifest.js  wasabi.sh  wasabi_asset.sh  wasabi_program.sh
server/: aoprotocol.py  area_manager.py  ban_manager.py  client_manager.py  commands.py  constants.py  districtclient.py  evidence.py  exceptions.py  fantacrypt.py  logger.py  masterserverclient.py  tsuserver.py  websocket.py
shared-release/: qrc_resources.cpp
src/: CMakeLists.txt  animationlayer.cpp  animationlayer.h  animationloader.cpp  animationloader.h  aoapplication.cpp  aoapplication.h  aoblipplayer.cpp  aoblipplayer.h  aobutton.cpp  aobutton.h  aocaseannouncerdialog.cpp  aocharbutton.cpp  aocharbutton.h  aocharmovie.cpp  aoclocklabel.cpp  aoclocklabel.h  aoemotebutton.cpp  aoemotebutton.h  aoemotepreview.cpp  aoemotepreview.h  aoevidencebutton.cpp  aoevidencebutton.h  aoevidencedisplay.cpp  aoevidencedisplay.h  aoimage.cpp  aoimage.h  aolayer.cpp  aolayer.h  aolineedit.cpp  aomovie.cpp  aomusicplayer.cpp  aomusicplayer.h  aooptionsdialog.cpp  aopacket.cpp  aopacket.h  aopath.cpp  aoscene.cpp  aosfxplayer.cpp  aosfxplayer.h  (+64 more)
test/: CMakeLists.txt  test_aopacket.cpp  test_apng.cpp  test_bass.cpp  test_caseloading.cpp  test_loopsidecar.cpp
tests/: CMakeLists.txt  test_aopacket.cpp  tests.pro  tests_common.pri
tests/unittest_datatypes/: tst_unittest_datatypes.cpp  unittest_datatypes.pro
translations/: ao_de.qm  ao_de.ts  ao_en.pot  ao_en.ts  ao_ja.pot  ao_ja.qm  ao_ja.ts  ja.mo  ja.po
update_server_testing/: testing_server.py
(+177 files in other folders)
